Cleanup examples and add typescript testing to CI (#609)

--- a/vue-2-webpack/src/index.html
+++ b/vue-2-webpack/src/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello world - a fluent-vue example</title>
+    <title>fluent-vue - Vue 2 Webpack example</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="../src/index.ts"></script>
   </body>
 </html>
