--- a/vue-3-parcel/public/index.html
+++ b/vue-3-parcel/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello world - a fluent-vue example</title>
+    <title>fluent-vue - Parcel example</title>
   </head>
   <body>
     <div id="root"></div>
