--- a/vue-2-vite-typescript/index.html
+++ b/vue-2-vite-typescript/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Webpack - a fluent-vue example</title>
+    <title>fluent-vue - Vue 2 Vite example with Typescript</title>
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="./src/index.ts"></script>
   </body>
 </html>
